Fix content alignment

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2247,7 +2247,7 @@ a {
   @media screen and (max-width: 767px) {
     .content {
       width: 100%;
-      margin: 107px 0px 0px 0px;
+      margin: 60px 0px 0px 0px;
       overflow: scroll; } }
 
 .heading {
