--- a/stylesheets/scss/_modules.scss
+++ b/stylesheets/scss/_modules.scss
@@ -9,7 +9,7 @@
 
    @include setDeviceStyle(phone) {
       width: 100%;
-      margin: 107px 0px 0px 0px;
+      margin: 60px 0px 0px 0px;
       overflow: scroll;
    }
 }
